# HPCA3

./: CMakeLists.txt  exo1.c  exo2_3.c  exo2_6.c  main.c  mesure temps execution.ods
Ex1/: Exercise1.c
Ex2/: exo2_1.c  exo2_2.c  exo2_5.c  exo2_6.c
Ex3/: n2salloc10.sh  script.sh  transl.m
Ex3/res1/: inNode.txt  outNode.txt  res.xlsx
Ex3/res2/: inNode.txt  outNode.txt  reg.mat  res.xlsx
Ex3/res3/: inNode.txt  outNode.txt  res.xlsx
Ex3/res4/: inNode.txt  outNode.txt  res.xlsx
Ex3/res5/: inNode.txt  outNode.txt  reg.mat  res.xlsx
